# Glitter

./: .gitmodules  CMakeLists.txt  Readme.md  how_to_build  wgh-readme.md
Glitter/Headers/: glitter.hpp  learngl.hpp  learngl_util.hpp  program.hpp
Glitter/Sources/: code10.1.cpp  code10.2.cpp  code10.3.cpp  code10.4.cpp  code10.5.cpp  code10.6.cpp  code5.1.cpp  code5.2.cpp  code6.1.cpp  code6.2.cpp  code6.3.cpp  code7.1.cpp  code8.1.cpp  code8.2.cpp  code9.1.cpp  code9.2.cpp  code9.3.cpp  ex1.cpp  ex5.1.cpp  ex5.2.cpp  ex5.3.cpp  ex5.8.1  ex5.8.1.cpp  ex5.8.2  ex5.8.2.cpp  ex5.8.3  ex5.8.3.cpp  ex6.1.cpp  ex6.2.cpp  ex6.3.cpp  main2.cpp  openglex.geany  template.cpp  template_simple_shader.cpp
